--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -684,6 +684,19 @@
 	langid = {en}
 }
 
+@Article{glmTMB,
+  title = {Parsimoniously Fitting Large Multivariate Random Effects
+    in {glmmTMB}},
+  author = {Maeve McGillycuddy and David I. Warton and Gordana
+    Popovic and Benjamin M. Bolker},
+  journal = {Journal of Statistical Software},
+  year = {2025},
+  volume = {112},
+  number = {1},
+  pages = {1--19},
+  doi = {10.18637/jss.v112.i01},
+}
+
 @article{torregrossa2022,
 	title = {Interoceptive functioning in schizophrenia and schizotypy},
 	author = {Torregrossa, {Lénie J.} and Amedy, Amad and Roig, Jacqueline and Prada, Andrea and Park, Sohee},
@@ -905,6 +918,44 @@ abstract = {Conscious interoception, the perception of internal bodily states, i
   volume={10},
   pages={s15327752jpa5304\_1},
   year={1993}
+}
+
+@book{costa1992neo,
+  title     = {Revised NEO Personality Inventory (NEO PI-R) and NEO Five-Factor Inventory (NEO-FFI)},
+  author    = {Costa, Paul T. and McCrae, Robert R.},
+  year      = {1992},
+  address   = {Odessa, FL},
+  publisher = {Psychological Assessment Resources}
+}
+
+@article{spitzer2006brief,
+  title={A brief measure for assessing generalized anxiety disorder: the GAD-7},
+  author={Spitzer, Robert L and Kroenke, Kurt and Williams, Janet BW and L{\"o}we, Bernd},
+  journal={Archives of internal medicine},
+  volume={166},
+  number={10},
+  pages={1092--1097},
+  year={2006},
+  publisher={American Medical Association}
+}
+
+@article{angold1995development,
+  title={Development of a short questionnaire for use in epidemiological studies of depression in children and adolescents.},
+  author={Angold, Adrian and Costello, Elizabeth J and Messer, Stephen C and Pickles, Andrew},
+  journal={International journal of methods in psychiatric research},
+  year={1995},
+  publisher={John Wiley \& Sons}
+}
+
+@article{kroenke2009ultra,
+  title={An ultra-brief screening scale for anxiety and depression: the PHQ--4},
+  author={Kroenke, Kurt and Spitzer, Robert L and Williams, Janet BW and L{\"o}we, Bernd},
+  journal={Psychosomatics},
+  volume={50},
+  number={6},
+  pages={613--621},
+  year={2009},
+  publisher={Elsevier}
 }
 
 @article{cabrera2018assessing,
