--- a/analysis/figures/table2.tex
+++ b/analysis/figures/table2.tex
@@ -2,7 +2,7 @@
 \fontsize{6.8pt}{8.1pt}\selectfont
 \begin{tabular*}{\linewidth}{@{\extracolsep{\fill}}lrlrrl}
 \toprule
-Questionnaire & Number of Dimensions & Assessment & Number of Items & Scoring & Example\_Items \\ 
+Questionnaire & Number of Dimensions & Assessment & Number of Items & Scoring & Example Items \\ 
 \midrule\addlinespace[2.5pt]
 {\bfseries Interoceptive Related} &  &  &  &  &  \\ 
 MAIA-2 & 8 & Interoceptive awareness & 37 & 6-point Likert scale & I notice when I am uncomfortable in my body \\ 
